Stabilize dashboard chart layout

--- a/index.html
+++ b/index.html
@@ -179,13 +179,17 @@
                 <article class="card">
                   <div class="card__body">
                     <h3>Lead Sources Performance</h3>
-                    <canvas id="leadSourceChart" aria-label="Lead source performance chart"></canvas>
+                    <div class="chart-frame">
+                      <canvas id="leadSourceChart" aria-label="Lead source performance chart"></canvas>
+                    </div>
                   </div>
                 </article>
                 <article class="card">
                   <div class="card__body">
                     <h3>Equipment Distribution</h3>
-                    <canvas id="equipmentChart" aria-label="Equipment mix chart"></canvas>
+                    <div class="chart-frame">
+                      <canvas id="equipmentChart" aria-label="Equipment mix chart"></canvas>
+                    </div>
                   </div>
                 </article>
                 <article class="card">
