Implement corporate refresh ingestion and automated lead routing

--- a/index.html
+++ b/index.html
@@ -558,6 +558,36 @@
                 <ul class="compliance-health" id="complianceHealth"></ul>
               </div>
             </article>
+            <article class="card" id="digitalHoursCard">
+              <div class="card__body grant-hours">
+                <div class="card__header">
+                  <div>
+                    <h3>Digital Literacy Hours</h3>
+                    <p class="section-subtitle">Minimum 170 hours required by the Digital Champion award.</p>
+                  </div>
+                  <span class="meta-chip" id="digitalHoursPercent">0%</span>
+                </div>
+                <div class="metric-progress">
+                  <div class="metric-progress__track">
+                    <div class="metric-progress__bar" id="digitalHoursBar"></div>
+                  </div>
+                </div>
+                <dl class="definition-list grant-hours__meta">
+                  <div class="definition-list__row">
+                    <dt>Completed</dt>
+                    <dd><span id="digitalHoursCompleted">0</span> hrs</dd>
+                  </div>
+                  <div class="definition-list__row">
+                    <dt>Remaining</dt>
+                    <dd><span id="digitalHoursRemaining">0</span> hrs</dd>
+                  </div>
+                  <div class="definition-list__row">
+                    <dt>Updated</dt>
+                    <dd id="digitalHoursUpdated">Pending</dd>
+                  </div>
+                </dl>
+              </div>
+            </article>
           </section>
 
           <div class="milestones-grid" id="grantMilestones"></div>
