--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,6 @@
       </div>
     </div>
 
-  <script src="app.js"></script>
+  <script type="module" src="web/main.js"></script>
 </body>
 </html>
