refactor: remove demo seeding and finalize HTI-BRIDGE rename

--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
           <header class="section-header">
             <div>
               <h2>Settings Dashboard</h2>
-              <p class="section-subtitle">Control personas, defaults, and feature toggles for NewDash.</p>
+              <p class="section-subtitle">Control personas, defaults, and feature toggles for HTI-BRIDGE.</p>
             </div>
             <div class="section-actions">
               <button class="btn btn--secondary" type="button" onclick="refreshSettingsFromApi()">Sync settings</button>
@@ -757,7 +757,7 @@
                 <form id="apiBaseForm" class="settings-form">
                   <div class="form-group">
                     <label class="form-label" for="apiBaseInput">API Base URL</label>
-                    <input class="form-control" id="apiBaseInput" type="url" placeholder="https://api.newdash.example.com">
+                    <input class="form-control" id="apiBaseInput" type="url" placeholder="https://api.hti-bridge.example.com">
                   </div>
                   <div class="form-actions">
                     <button class="btn btn--primary" type="button" onclick="saveApiBaseOverride()">Set API Base</button>
@@ -774,7 +774,7 @@
                 <form id="authSettingsForm" class="settings-form">
                   <div class="form-group">
                     <label class="form-label" for="authUrlInput">Sign-in URL</label>
-                    <input class="form-control" id="authUrlInput" type="url" placeholder="https://newdash.example.com/auth/login">
+                    <input class="form-control" id="authUrlInput" type="url" placeholder="https://hti-bridge.example.com/auth/login">
                   </div>
                   <p class="settings-hint">Use your identity provider, reverse proxy login, or API gateway sign-in endpoint.</p>
                   <div class="form-actions">
